<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="android.widget.FrameLayout">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/swipeRefreshLayout">

        <FrameLayout
            android:tag="@string/tag_content"
            android:id="@+id/flState"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress"
                style="@style/progressStyle"
                android:layout_gravity="center"
                android:tag="@string/tag_progress" />

            <LinearLayout
                android:id="@+id/llError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:tag="@string/tag_error"
                android:visibility="gone">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/err_http_timeout" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/buttonRefresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/state_padding_vertical"
                    android:foreground="@drawable/ripple_round_white"
                    app:cardBackgroundColor="?colorPrimary"
                    app:cardCornerRadius="@dimen/state_radius_refresh_button"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/state_padding_horizontal"
                        android:paddingVertical="@dimen/state_padding_vertical"
                        android:text="@string/refresh"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_12" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical"
                android:tag="@string/tag_empty"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:visibility="gone"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageEmpty"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:id="@+id/tvEmpty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                     />
            </LinearLayout>
        </FrameLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</merge>